--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "inversify": "^6.0.2",
     "tslog": "^4.9.2"
   },
   "devDependencies": {
